--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile "org.scala-lang:scala-library:2.11.6"
+    compile "com.android.support:recyclerview-v7:22.0.0"
+    compile "com.android.support:support-v4:22.0.0"
 }
